--- a/tesisTomba/templates/detalleLugar.html
+++ b/tesisTomba/templates/detalleLugar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CENTRO COMERCIAL</title>
        
     </head>
@@ -15,6 +16,7 @@
         
         <h2>Fecha: {{fecha}}</h2>
         <h2>Hora de entrada: {{horario}}</h2>
+        <a href="{{ imagen }}" download="{{ lugar.lugar }}.png"><button>Descargar QR</button></a>
 
     </body>
 </html>
