abm cc terminado

--- a/tesisTomba/templates/gestion/detalle_centro.html
+++ b/tesisTomba/templates/gestion/detalle_centro.html
@@ -102,7 +102,7 @@
         <a href="{% url 'eliminarCentro' nombre %}" class="btn-details-eliminar">ELIMINAR</a>
         <a href="{% url 'edicionCentro' nombre %}" class="btn-details-editar">EDITAR</a>
     </div>
-    <a href="{% url 'centroComercial' %}" class="btn-details">VOLVER A PAGINA PRINCIPAL</a>
+    <a href="{% url 'centroComercial' %}" class="btn-details">VOLVER A LA PAGINA PRINCIPAL</a>
     
 </body>
 </html>
