falta crear y editar lugares

--- a/tesisTomba/templates/funcion/sin_lugares.html
+++ b/tesisTomba/templates/funcion/sin_lugares.html
@@ -1,3 +1,3 @@
 {% block content %}
-  <h1>No hay lugares disponibles</h1>
+  <h1>No hay lugares disponibles en el centro comercial</h1>
 {% endblock %}
