--- a/tesisTomba/templates/gestion/detalleLugar.html
+++ b/tesisTomba/templates/gestion/detalleLugar.html
@@ -121,7 +121,7 @@
             <img src="{{ qr.url }}" alt="Código QR">
         {% endif %}
     </div>
-    <a href="{% url 'listLugares' centroComercial%}" class="btn-details">VOLVER</a>
+    <a href="{% url 'estacionamiento:listLugares' centroComercial%}" class="btn-details">VOLVER</a>
 
     
     
