--- a/tesisTomba/templates/gestion/crearCentroComercial.html
+++ b/tesisTomba/templates/gestion/crearCentroComercial.html
@@ -116,7 +116,7 @@
 <body>
     <h1>Crear Centro Comercial</h1>
 
-    <form method="post" action="{% url 'crearCentroComercial' %}">{% csrf_token%}
+    <form method="post" action="{% url 'estacionamiento:crearCentroComercial' %}">{% csrf_token%}
         
   <div class="form-group">
     <label for="nombre">Nombre del centro comercial:</label>
@@ -125,7 +125,7 @@
     <script>
       window.onload = function() {
         alert("{{ error }}");
-        window.location.href = "{% url 'crearCentroComercial' %}";
+        window.location.href = "{% url 'estacionamiento:crearCentroComercial' %}";
       };
     </script>
   {% endif %}
@@ -151,9 +151,9 @@
     {% endif %}
   </div>
 
-  <button type="buttom" class="btn-details " formaction="{% url 'centroComercial' %}">Crear Centro Comercial</button>
+  <button type="buttom" class="btn-details " formaction="{% url 'estacionamiento:centroComercial' %}">Crear Centro Comercial</button>
 
-  <a href="{% url 'centroComercial' %}" class="btn-details-volver">VOLVER A LA PAGINA PRINCIPAL</a>
+  <a href="{% url 'estacionamiento:centroComercial' %}" class="btn-details-volver">VOLVER A LA PAGINA PRINCIPAL</a>
 </body>
 </html>
 
