--- a/tesisTomba/templates/gestion/detalle_centro.html
+++ b/tesisTomba/templates/gestion/detalle_centro.html
@@ -115,11 +115,11 @@
         <p><strong>Cantidad de Lugares:</strong> {{ cantLugares }}</p>
         <p><strong>Niveles:</strong> {{ niveles }}</p>
         <img src="{{ imagen }}" alt="Código QR de {{ nombre }}">
-        <a href="{% url 'eliminarCentro' nombre %}" class="btn-details-eliminar">ELIMINAR</a>
-        <a href="{% url 'edicionCentro' nombre %}" class="btn-details-editar">EDITAR</a>
-        <a href="{% url 'listLugares' nombre  %}" class="btn-details-lugar">LUGARES</a>
+        <a href="{% url 'estacionamiento:eliminarCentro' nombre %}" class="btn-details-eliminar">ELIMINAR</a>
+        <a href="{% url 'estacionamiento:edicionCentro' nombre %}" class="btn-details-editar">EDITAR</a>
+        <a href="{% url 'estacionamiento:listLugares' nombre  %}" class="btn-details-lugar">LUGARES</a>
     </div>
-    <a href="{% url 'centroComercial' %}" class="btn-details">VOLVER A LA PAGINA PRINCIPAL</a>
+    <a href="{% url 'estacionamiento:centroComercial' %}" class="btn-details">VOLVER A LA PAGINA PRINCIPAL</a>
     
 </body>
 </html>
