--- a/tesisTomba/templates/gestion/eliminarLugar.html
+++ b/tesisTomba/templates/gestion/eliminarLugar.html
@@ -78,7 +78,7 @@
         {% csrf_token %}
         <button class="btn-details-eliminar" type="submit" >ELIMINAR</button>
         
-        <button type="buttom" class= "btn-details-cancelar"formaction="{% url 'detalleLugar' lugar.lugar   %}">CANCELAR</button>
+        <button type="buttom" class= "btn-details-cancelar"formaction="{% url 'estacionamiento:detalleLugar' lugar.lugar lugar.id  %}">CANCELAR</button>
     </form>
 </body>
 </html>
