--- a/tesisTomba/templates/usuario/detalleUsuario.html
+++ b/tesisTomba/templates/usuario/detalleUsuario.html
@@ -142,7 +142,7 @@
         <a href="{% url 'estacionamiento:edicionCentro' nombre %}" class="btn-details-editar">EDITAR</a>
         <a href="{% url 'estacionamiento:listLugares' nombre  %}" class="btn-details-lugar">LUGARES</a> {% endcomment %}
     </div>
-    <a href="{% url 'usuario' %}" class="btn-details">VOLVER A LA PAGINA PRINCIPAL</a>
+    <a href="{% url 'usuario' %}" class="btn-details">VOLVER</a>
     
 </body>
 </html>
