--- a/tesisTomba/templates/usuario/login.html
+++ b/tesisTomba/templates/usuario/login.html
@@ -87,7 +87,7 @@
 
             <input type="submit" value="Iniciar sesión">
         </form>
-        <button class="register-btn" onclick="location.href='{% url 'register' %}'">Registrarse</button>
+        <button class="register-btn" onclick="location.href='{% url 'usuarios:register' %}'">Registrarse</button>
     </div>
 </body>
 </html>
