--- a/tesisTomba/templates/usuario/usuario.html
+++ b/tesisTomba/templates/usuario/usuario.html
@@ -68,20 +68,38 @@
             background-color: #0056b3;
             color: #fff;
         }
+        .btn-details-volver {
+            position: absolute;
+            top: 7%;
+            right: 20px;
+            transform: translateY(-50%);
+            text-decoration: none;
+            color: #333;
+            background-color: #e7e7e7;
+            padding: 8px 16px;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+
+        .btn-details-volver:hover {
+            background-color: #0056b3;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
     <h1>
         USUARIOS:
-    </h1>
+    </h1>||
     
     <ul>
         {% for usuario in usuario %}
             <li>
                 <h2>{{ usuario.nombre }}</h2>
-                <a href="{% url 'detalleUsuario' usuario.id %}" class="btn-details">Ver detalles</a>
+                <a href="{% url 'usuarios:detalleUsuario' usuario.id %}" class="btn-details">Ver detalles</a>
             </li>
         {% endfor %}
     </ul>
+    <a href="{% url 'usuarios:administrador'%}" class="btn-details-volver">VOLVER</a>
 </body>
 </html>
