--- a/tesisTomba/templates/gestion/gestionLugares.html
+++ b/tesisTomba/templates/gestion/gestionLugares.html
@@ -91,6 +91,24 @@
             margin-top: 20px;
             text-align: right;
           }
+
+        .btn-details-logout {
+            position: absolute;
+            top: 3%;
+            right: 20px;
+            transform: translateY(-50%);
+            text-decoration: none;
+            color: #333;
+            background-color: #e7e7e7;
+            padding: 8px 16px;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+
+        .btn-details-logout:hover {
+            background-color: #0056b3;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -116,5 +134,7 @@
             </li>
         {% endfor %}
     </ul>
+        <a href="{% url 'usuarios:logout' %}" class="btn-details-logout">Cerrar Sesión</a>
+
 </body>
 </html>
