--- a/tesisTomba/templates/funcion/liberarLugar.html
+++ b/tesisTomba/templates/funcion/liberarLugar.html
@@ -2,12 +2,47 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-          
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f1f1f1;
+                padding: 20px;
+            }
+            .container {
+                margin-top: 60px;
+                text-align: center;
+            }
+    
+            /* Estilos adicionales */
+            /* ... */
+            .btn-details-volver {
+                position: absolute;
+                top: 3%;
+                left: 20px;
+                transform: translateY(-50%);
+                text-decoration: none;
+                color: #333;
+                background-color: #e7e7e7;
+                padding: 8px 16px;
+                border-radius: 4px;
+                font-weight: bold;
+            }
+    
+            .btn-details-volver:hover {
+                background-color: #0056b3;
+                color: #fff;
+            }
+        </style> 
     </head>
     <body>
+        {% include 'navbar.html' %}
+    </div>
+
+    <div class="container">
         {% block content %}
         <h2>Lugar {{lugar}} liberado correctamente </h2>
       {% endblock %}
-
+    </div>
+    <a href="{% url 'usuarios:scanner' user.id%}" class="btn-details-volver">VOLVER</a>
     </body>
 </html>
