--- a/tesisTomba/templates/usuario/admin.html
+++ b/tesisTomba/templates/usuario/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,96 +16,31 @@
             align-items: center;
         }
 
-        
-
-        .btn-details-cc{
+        .btn-details,
+        .btn-details-cc {
             position: absolute;
             top: 50%;
             left: 20px;
             transform: translateY(-50%);
             text-decoration: none;
             color: #333;
-            background-color: #e7e7e7;
+            background-color: #a3c1d6;
             padding: 8px 16px;
             border-radius: 4px;
             font-weight: bold;
-        }
-
-        .btn-details:hover {
-            background-color: #0056b3;
-            color: #fff;
-        }
-        .btn-details{
-            position: absolute;
-            top: 50%;
-            left: 20px;
-            transform: translateY(-50%);
-            text-decoration: none;
-            color: #333;
-            background-color: #e7e7e7;
-            padding: 8px 16px;
-            border-radius: 4px;
-            font-weight: bold;
-        }
-
-        .btn-details:hover {
-            background-color: #0056b3;
-            color: #fff;
-        }
-
-        .btn-add {
-            text-decoration: none;
-            color: #333;
-            background-color: #e7e7e7;
-            padding: 8px 16px;
-            border-radius: 4px;
-            font-weight: bold;
-            float: right;
-            margin-top: -60px;
-        }
-
-        .btn-add:hover {
-            background-color: #0056b3;
-            color: #fff;
-        }
-        .square-button {
-            display: inline-block;
-            padding: 10px 20px;
-            border: none;
-            background-color:  #e7e7e7;
-            color: #333;
-            font-size: 16px;
-            text-align: center;
             transition: background-color 0.3s;
-            text-decoration: none;
-            
-          }
-          
-          .square-button:hover {
-            background-color: #0056b3;
-            color: #fff;
-          }
-          
-          .square-button:focus {
-            outline: none;
-          }
-          .btn-details {
-            position: absolute;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            text-decoration: none;
-            color: #333;
-            background-color: #e7e7e7;
-            padding: 8px 16px;
-            border-radius: 4px;
-            font-weight: bold;
         }
 
-        .btn-details:hover {
-            background-color: #0056b3;
-            color: #fff;
+        .btn-details:hover,
+        .btn-details-cc:hover {
+            background-color: #7aa2c4;
         }
+
+        .btn-details {
+            right: 20px;
+            left: auto;
+        }
+
         .btn-details-logout {
             position: absolute;
             top: 3%;
@@ -114,27 +48,66 @@
             transform: translateY(-50%);
             text-decoration: none;
             color: #333;
-            background-color: #e7e7e7;
+            background-color: #d6a3a3;
             padding: 8px 16px;
             border-radius: 4px;
             font-weight: bold;
+            transition: background-color 0.3s;
         }
 
         .btn-details-logout:hover {
-            background-color: #0056b3;
+            background-color: #c47a7a;
+        }
+
+        .btn-add {
+            text-decoration: none;
+            color: #333;
+            background-color: #b7c6d3;
+            padding: 8px 16px;
+            border-radius: 4px;
+            font-weight: bold;
+            float: right;
+            margin-top: -60px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-add:hover {
+            background-color: #9ba7b3;
+        }
+
+        .square-button {
+            display: inline-block;
+            padding: 10px 20px;
+            border: none;
+            background-color: #7aa2c4;
             color: #fff;
+            font-size: 16px;
+            text-align: center;
+            transition: background-color 0.3s;
+            text-decoration: none;
+            border-radius: 4px;
+        }
+
+        .square-button:hover {
+            background-color: #5983a1;
+        }
+
+        .square-button:focus {
+            outline: none;
         }
     </style>
 </head>
 <body>
- 
-    <h1>
-        ADMINISTARDOR:
-    </h1>
+    {% include 'navbar.html' %}
+    
+    <h1>ADMINISTRADOR</h1>
     <h2>Seleccione una opción:</h2>
-        <a href="{% url 'estacionamiento:centroComercial' %}"  class="square-button">Administrar Centros Comerciales</a>
+        <a href="{% url 'estacionamiento:centroComercial' %}" class="square-button">Administrar Centros Comerciales</a>
         <a href="{% url 'usuarios:usuario' %}" class="square-button">Administrar Usuarios</a>
-        <a href="{% url 'usuarios:logout' %}" class="btn-details-logout">Cerrar Sesión</a>
- 
+        {% comment %} <a href="{% url 'usuarios:logout' %}" class="btn-details-logout">Cerrar Sesión</a> {% endcomment %}
 </body>
 </html>
+
+
+
+    
