--- a/tesisTomba/templates/usuario/register.html
+++ b/tesisTomba/templates/usuario/register.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Registrarse</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             font-family: Arial, sans-serif;
